--- a/index.html
+++ b/index.html
@@ -5,6 +5,31 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<header>
+		<nav>
+			<div class="left">
+				<p><a href="index.html">Chaitali Rahol</a></p>
+			</div>
+			<div class="right">
+				<ul>
+					<li><a href="#">AGENCY</a></li>
+					<li><a href="#">CLIENTS</a></li>
+					<li><a href="#">GALLERY</a></li>
+					<li><a href="#">CONTACT US</a></li>
+				</ul>
+			</div>
+		</nav>
+	</header>
+
+	<div class="container">
+		<div class="content">
+			<p>I am an independant Web Developer from Thunder Bay, ON. I enjoy building stunning Web Applications with best possible visuals. If you are a small business owner and needs to develop a web site for, you can contact me now.</p>
+		</div>
+		<div>
+			<img src="images/profile.jpg">
+		</div>
+	</div>
+
 	<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
