Made changes to all the html files

--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,14 @@
 	</header>
 
 	<div class="container">
-		
+		<div class="contact">
+			<h2>You can contact us here... <a href="#">XYZ@HOSTNAME.COM</a></h2>
+		</div>
 	</div>
+
+	<footer>
+		<p>This Website design was inspired from <a target="_blank" href="https://taylorpearson.me/">taylorpearson.me</a></p>
+	</footer>
 
 	<script type="text/javascript" src="main.js"></script>
 </body>
