--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 		</div>
 	</div>
 
+	<footer>
+		<p>This Website design was inspired from <a target="_blank" href="https://taylorpearson.me/">taylorpearson.me</a></p>
+	</footer>
+
 	<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
