--- a/projects.html
+++ b/projects.html
@@ -20,8 +20,37 @@
 	</header>
 
 	<div class="container">
-		
+		<div class="projects">
+			<div class="project">
+				<a href="https://github.com/npatel17Confed/Group7-Lab1"><img src="images/p1.png"></a>
+				<h2>Group 7 - Lab 1</h2>
+			</div>
+			<div class="project">
+				<a href="https://github.com/npatel17Confed/Group7-Lab2"><img src="images/p2.png"></a>
+				<h2>Group 7 - Lab 2</h2>
+			</div>
+			<div class="project">
+				<a href="https://github.com/npatel17Confed/Group8-Lab5"><img src="images/p3.png"></a>
+				<h2>Group 8 - Lab 5</h2>
+			</div>
+			<div class="project">
+				<a href="#"><img src="images/tba.jpg"></a>
+				<h2>Group 8 - Lab 6</h2>
+			</div>
+			<div class="project">
+				<a href="#"><img src="images/tba.jpg"></a>
+				<h2>Group 8 - Lab 7</h2>
+			</div>
+			<div class="project">
+				<a href="#"><img src="images/tba.jpg"></a>
+				<h2>Group 8 - Lab 8</h2>
+			</div>
+		</div>
 	</div>
+
+	<footer>
+		<p>This Website design was inspired from <a target="_blank" href="https://taylorpearson.me/">taylorpearson.me</a></p>
+	</footer>
 
 	<script type="text/javascript" src="main.js"></script>
 </body>
