Made some changes to the styling of the pages

--- a/projects.html
+++ b/projects.html
@@ -22,15 +22,15 @@
 	<div class="container">
 		<div class="projects">
 			<div class="project">
-				<a href="https://github.com/npatel17Confed/Group7-Lab1"><img src="images/p1.png"></a>
+				<a href="https://github.com/npatel17Confed/Group7-Lab1" target="_blank"><img src="images/p1.png"></a>
 				<h2>Group 7 - Lab 1</h2>
 			</div>
 			<div class="project">
-				<a href="https://github.com/npatel17Confed/Group7-Lab2"><img src="images/p2.png"></a>
+				<a href="https://github.com/npatel17Confed/Group7-Lab2" target="_blank"><img src="images/p2.png"></a>
 				<h2>Group 7 - Lab 2</h2>
 			</div>
 			<div class="project">
-				<a href="https://github.com/npatel17Confed/Group8-Lab5"><img src="images/p3.png"></a>
+				<a href="https://github.com/npatel17Confed/Group8-Lab5" target="_blank"><img src="images/p3.png"></a>
 				<h2>Group 8 - Lab 5</h2>
 			</div>
 			<div class="project">
