--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<div class="container">
 		<div class="content">
 			<h1>This pages was built using Float Layout and Positioning</h1>
-			<p>We are independant Web Developers from Thunder Bay, ON. We enjoy building stunning Web Applications with best possible visuals. If you are a small business owner and needs to develop a web site for, you can contact us now.</p>
+			<p>We are independent Web Developers from Thunder Bay, ON. We enjoy building stunning Web Applications with best possible visuals. If you are a small business owner and needs to develop a web site for, you can contact us now.</p>
 		</div>
 		<div class="image">
 			<img src="images/profile.jpg">
