added a form in index.html and made some changes in styling

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,11 @@
 
 	<div class="container">
 		<div class="contact">
-			<h2>You can contact us here... <a href="#">XYZ@HOSTNAME.COM</a></h2>
+			<h3>You can contact us here... <a href="#">user@hostname.com</a></h3>
+			<pre>
+123, Street St.,
+Thunder Bay,
+ON - A1A 2B2.</pre>
 		</div>
 	</div>
 
