--- a/projects.html
+++ b/projects.html
@@ -20,6 +20,7 @@
 	</header>
 
 	<div class="container">
+		<h3>These are some of the projects that we have been working on...</h3>
 		<div class="projects">
 			<div class="project">
 				<a href="https://github.com/npatel17Confed/Group7-Lab1" target="_blank"><img src="images/p1.png"></a>
