--- a/contact.html
+++ b/contact.html
@@ -21,11 +21,21 @@
 
 	<div class="container">
 		<div class="contact">
-			<h3>You can contact us here... <a href="#">user@hostname.com</a></h3>
-			<pre>
+			<div class="info">
+				<img src="images/mail.png">
+				<h3>admin@adaptable.com</h3>
+			</div>
+			<div class="info">
+				<img src="images/address.png">
+				<h3><pre>
 123, Street St.,
 Thunder Bay,
-ON - A1A 2B2.</pre>
+ON - A1A 2B2.</pre></h3>
+			</div>
+			<div class="info">
+				<img src="images/call.jpg">
+				<h3>(123) 456-7890</h3>
+			</div>
 		</div>
 	</div>
 
