Used float design in the homepage container

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div id="error"></div>
 		</div>
 		<div class="image">
-			<img src="images/profile.jpg">
+			 <img id="profile" src="images/profile.jpg"><br>
 		</div>
 	</div>
 
